<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/sign_up"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/userEmail"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/userPassword"
        android:hint="@string/enter_your_password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/signUpBtn"
        android:text="@string/sign_up"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/loginMainBtn"
        android:text="@string/login_page"
        android:gravity="center"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>