<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1C32AD">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_notes"
            android:textColor="@color/white"
            android:textSize="28sp" />


        <ImageView
            android:id="@+id/logoutBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:src="@drawable/exit"
            android:text="@string/logout" />

        <ImageView
            android:id="@+id/bookmarkBtn"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:src="@drawable/bookmark" />

        <!--        <Button-->
        <!--            android:id="@+id/logoutBtn"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="end"-->
        <!--            android:layout_margin="10dp"-->
        <!--            android:text="@string/logout" />-->


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

    </androidx.recyclerview.widget.RecyclerView>


    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_add_your_first_name_here"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/please_add_your_last_name_here"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:src="@drawable/ic_add" />


</RelativeLayout>